name:                   world
version:                0.1.0.0
synopsis:               Types related to the world.
description:            Please see README.md
license:                BSD3
license-file:           LICENSE
author:                 Sean Parsons
maintainer:             github@futurenotfound.com
category:               Factual
build-type:             Simple
cabal-version:          >=1.10

library
  hs-source-dirs:       src
  exposed-modules:      World.Countries
  other-modules:        World.Countries.TH
  build-depends:        base >= 4.7 && < 5
                      , http-conduit
                      , cassava
                      , vector
                      , template-haskell
                      , hashable
                      , syb
  default-language:     Haskell2010

test-suite world-test
  type:                 exitcode-stdio-1.0
  hs-source-dirs:       test
  main-is:              Spec.hs
  build-depends:        base
                      , world
  ghc-options:          -threaded -rtsopts -with-rtsopts=-N
  default-language:     Haskell2010
